folder name change

--- a/Submit Assienment/Sanket_Jadhav-17/index.html
+++ b/Submit Assienment/Sanket_Jadhav-17/index.html
@@ -1,5 +1,8 @@
-<div class="middle-light-blue"></div>
-<div class="top-left-blue"></div>
-<div class="top-right-yellow"></div>
-<div class="bottom-left-yellow"></div>
-<div class="yellow-dash"></div>
+<div class="invitation-background">
+    <div class="middle-light-blue"></div>
+    <div class="top-left-blue"></div>
+    <div class="top-right-yellow"></div>
+    <div class="bottom-left-yellow"></div>
+    <div class="yellow-dash"></div>
+    <div class="rcorners"></div>
+</div>
