--- a/Submit Assienment/Sanket_Jadhav-18/index.html
+++ b/Submit Assienment/Sanket_Jadhav-18/index.html
@@ -1,12 +1,18 @@
-<div class="middle-light-blue"></div>
-<div class="top-left-blue"></div>
-<div class="yellow-dash"></div>
-<div class="circle"></div>
-<div class="circle1"></div>
-<div class="circle2"></div>
-<div class="circle3"></div>
-<div class="line"></div>
-<div class="line1"></div>
-<div class="line2"></div>
-<div class="line3"></div>
-<div class="recrners"></div>
+<div class="invitation-background">
+    <div class="middle-light-blue"></div>
+    <div class="top-left-blue"></div>
+    <div class="yellow-dash"></div>
+    <div class="circle"></div>
+    <div class="circle1"></div>
+    <div class="circle2"></div>
+    <div class="circle3"></div>
+    <div class="line"></div>
+    <div class="line1"></div>
+    <div class="line2"></div>
+    <div class="line3"></div>
+    <div class="line4"></div>
+    <div class="line5"></div>
+    <div class="line6"></div>
+    <div class="recrners"></div>
+
+</div>
