--- a/Submit Assienment/Sanket_Jadhav_18/preview.html
+++ b/Submit Assienment/Sanket_Jadhav_18/preview.html
@@ -65,6 +65,8 @@
 
                 <div class="event-organizer">Organized by:Bride & Groom</div>
                 <div class="event-other-organizers">Friends and Family of the Bride and Groom</div>
+                <div class="event-organizers-contact-person"></div>
+                <div class="event-organizers-contact-number"></div>
             </div>
         </div>
     </div>
